--- a/index.html
+++ b/index.html
@@ -8,28 +8,62 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Portfolio</h1>
-        <button id="theme-toggle">Toggle Dark/Light Mode</button>
+        <nav>
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-    <main>
-        <section id="about-me">
-            <h2>About Me</h2>
-            <p>Information about the client.</p>
-        </section>
-        <section id="featured-projects">
-            <h2>Featured Projects</h2>
-            <div class="project">
-                <h3>Project Title</h3>
-                <p>Short description of the project.</p>
-                <a href="#">View Project</a>
-            </div>
-            <!-- More projects can be added here -->
-        </section>
-    </main>
-    <footer>
-        <h2>Contact Me</h2>
-        <a href="contact.html">Go to Contact Page</a>
-    </footer>
+    <section id="hero">
+        <h1>Welcome to My Portfolio</h1>
+        <p>I'm a full-stack web developer.</p>
+        <a href="#projects" class="cta">View Projects</a>
+    </section>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Personal background and information goes here.</p>
+    </section>
+    <section id="projects">
+        <h2>Projects</h2>
+        <div class="project-grid">
+            <!-- Project cards will be rendered here -->
+        </div>
+    </section>
+    <section id="skills">
+        <h2>Skills</h2>
+        <div class="skills-category">
+            <h3>Frontend</h3>
+            <p>List of frontend skills here.</p>
+        </div>
+        <div class="skills-category">
+            <h3>Backend</h3>
+            <p>List of backend skills here.</p>
+        </div>
+        <div class="skills-category">
+            <h3>Tools</h3>
+            <p>List of tools here.</p>
+        </div>
+    </section>
+    <section id="experience">
+        <h2>Experience</h2>
+        <p>Details of relevant work experience goes here.</p>
+    </section>
+    <section id="contact">
+        <h2>Contact</h2>
+        <form id="contactForm">
+            <label for="name">Name:</label>
+            <input type="text" id="name" required>
+            <label for="email">Email:</label>
+            <input type="email" id="email" required>
+            <label for="message">Message:</label>
+            <textarea id="message" required></textarea>
+            <button type="submit">Submit</button>
+        </form>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
