--- a/index.html
+++ b/index.html
@@ -3,67 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Website</title>
+    <title>Handmade Jewelry E-Commerce</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
+        <h1>Welcome to Handmade Jewelry</h1>
         <nav>
             <ul>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Catalog</a></li>
+                <li><a href="#">Cart</a></li>
+                <li><a href="#">Checkout</a></li>
             </ul>
         </nav>
     </header>
-    <section id="hero">
-        <h1>Welcome to My Portfolio</h1>
-        <p>I'm a full-stack web developer.</p>
-        <a href="#projects" class="cta">View Projects</a>
-    </section>
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Personal background and information goes here.</p>
-    </section>
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="project-grid">
-            <!-- Project cards will be rendered here -->
-        </div>
-    </section>
-    <section id="skills">
-        <h2>Skills</h2>
-        <div class="skills-category">
-            <h3>Frontend</h3>
-            <p>List of frontend skills here.</p>
-        </div>
-        <div class="skills-category">
-            <h3>Backend</h3>
-            <p>List of backend skills here.</p>
-        </div>
-        <div class="skills-category">
-            <h3>Tools</h3>
-            <p>List of tools here.</p>
-        </div>
-    </section>
-    <section id="experience">
-        <h2>Experience</h2>
-        <p>Details of relevant work experience goes here.</p>
-    </section>
-    <section id="contact">
-        <h2>Contact</h2>
-        <form id="contactForm">
-            <label for="name">Name:</label>
-            <input type="text" id="name" required>
-            <label for="email">Email:</label>
-            <input type="email" id="email" required>
-            <label for="message">Message:</label>
-            <textarea id="message" required></textarea>
-            <button type="submit">Submit</button>
-        </form>
-    </section>
+    <main>
+        <section class="product-catalog">
+            <h2>Our Products</h2>
+            <div class="product-list">
+                <!-- Product items will be rendered here -->
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>© 2023 Handmade Jewelry. All rights reserved.</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
